--- a/contact.html
+++ b/contact.html
@@ -276,6 +276,9 @@ https://templatemo.com/tm-591-villa-agency
   <script src="assets/js/owl-carousel.js"></script>
   <script src="assets/js/counter.js"></script>
   <script src="assets/js/custom.js"></script>
+  <!-- SiteSpeakAI - Add ChatGPT to your website -->
+                    <script type="text/javascript">(function(){d=document;s=d.createElement("script");s.src="https://sitespeak.ai/chatbots/70f17a5d-3fbb-4ae2-b92b-d29a6026b57b.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+                    <!-- / SiteSpeakAI -->
 
   </body>
 </html>
