--- a/property-details.html
+++ b/property-details.html
@@ -357,6 +357,9 @@ https://templatemo.com/tm-591-villa-agency
     }
     
     </script>
+  <!-- SiteSpeakAI - Add ChatGPT to your website -->
+                    <script type="text/javascript">(function(){d=document;s=d.createElement("script");s.src="https://sitespeak.ai/chatbots/70f17a5d-3fbb-4ae2-b92b-d29a6026b57b.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+                    <!-- / SiteSpeakAI -->
 
   </body>
 </html>
