--- a/properties.html
+++ b/properties.html
@@ -62,7 +62,7 @@
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
-                      <img src="./assets/images/logo.jpeg" alt="Logo" style="height: 50px; width: 90px;  position: relative;">
+                      <img src="./assets/images/logo.jpg" alt="Logo" style="height: 50px; width: 90px;  position: relative;">
                         
                     </a>
                     <!-- ***** Logo End ***** -->
