--- a/property-details.html
+++ b/property-details.html
@@ -68,7 +68,7 @@ https://templatemo.com/tm-591-villa-agency
                     <!-- ***** Logo Start ***** -->
                     
                     <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
-                      <img src="./assets/images/logo.jpeg" alt="Logo" style="height: 50px; width: 90px;  position: relative;">
+                      <img src="./assets/images/logo.jpg" alt="Logo" style="height: 50px; width: 90px;  position: relative;">
                         
                     </a>
                     <!-- ***** Logo End ***** -->
