--- a/contact.html
+++ b/contact.html
@@ -239,8 +239,8 @@ https://templatemo.com/tm-591-villa-agency
         <p>
           Please Subscribe to our newsletter
         </p>
-        <form action="#">
-          <input type="text" placeholder="Your email" required>
+        <form action="mailto:bpdubdr@gmail.com" method="post" enctype="text/plain">
+          <input type="email" placeholder="Your email" required>
           <button type="submit">SUBSCRIBE</button>
         </form>
         <div class="icons">
