--- a/contact.html
+++ b/contact.html
@@ -241,6 +241,8 @@ https://templatemo.com/tm-591-villa-agency
         </p>
         <form action="mailto:bpdubdr@gmail.com" method="post" enctype="text/plain">
           <input type="email" placeholder="Your email" required>
+          <input type="hidden" name="Subject" value="Subscription">
+          <input type="hidden" name="Body" value="I have subscribed">
           <button type="submit">SUBSCRIBE</button>
         </form>
         <div class="icons">
