--- a/contact.html
+++ b/contact.html
@@ -239,7 +239,7 @@ https://templatemo.com/tm-591-villa-agency
         <p>
           Please Subscribe to our newsletter
         </p>
-        <form action="mailto:bpdubdr@gmail.com" method="post" enctype="text/plain">
+        <form action="subscription.php" method="post" enctype="text/plain">
           <input type="email" placeholder="Your email" required>
           <input type="hidden" name="Subject" value="Subscription">
           <input type="hidden" name="Body" value="I have subscribed">
